--- a/index.html
+++ b/index.html
@@ -6,18 +6,38 @@
     <title>For Mamee 💖</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #fce4ec;
             text-align: center;
-            padding: 50px;
-            background-color: #ffebf2;
+            padding: 40px;
+            margin: 0;
+        }
+        h1 {
+            color: #ff4d6d;
+            font-size: 36px;
+            margin-bottom: 20px;
+            font-family: 'Georgia', serif;
+        }
+        .show-btn {
+            background-color: #ff8fa3;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 25px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .show-btn:hover {
+            background-color: #ff4d6d;
         }
         .popup {
             width: 80%;
-            max-width: 400px;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            max-width: 500px;
+            background-color: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             margin: auto;
             position: absolute;
             top: 50%;
@@ -27,54 +47,60 @@
         }
         h2 {
             color: #ff4d6d;
+            font-size: 30px;
+            margin-bottom: 20px;
         }
         p {
             color: #333;
+            font-size: 18px;
+            line-height: 1.6;
+            margin: 10px 0;
+            text-align: left;
         }
         .close-btn {
-            background: #ff4d6d;
+            background-color: #ff8fa3;
             color: white;
-            padding: 10px 15px;
+            padding: 12px 20px;
             border: none;
-            border-radius: 5px;
+            border-radius: 25px;
+            font-size: 18px;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
         }
-        .show-btn {
-            background: #ff4d6d;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+        .close-btn:hover {
+            background-color: #ff4d6d;
         }
     </style>
 </head>
 <body>
 
+<h1>For My Lovely Mamee 💖</h1>
+
 <button class="show-btn" onclick="showPopup()">Show Poem for Mamee 💖</button>
 
 <div class="popup" id="popup">
     <h2>Dear Mamee, 💖</h2>
-    <p>Mom, I know I let you down,  
-    Left you tired with a worried frown.  
-    I should have helped, I should have seen,  
-    All the ways you cared for me.  
+    <p>Mom, I know I let you down,<br>
+    Left you tired with a worried frown.<br>
+    I should have helped, I should have seen,<br>
+    All the ways you cared for me.</p>
+    
+    <p>Through every sigh and weary glance,<br>
+    You gave me love, a second chance.<br>
+    Your hands so strong, yet soft and kind,<br>
+    A heart like yours is hard to find.</p>
+    
+    <p>I’m sorry for the times I missed,<br>
+    The chores undone, the hug unkissed.<br>
+    But know that deep inside my heart,<br>
+    We’re never far, we’re never apart.</p>
 
-    Through every sigh and weary glance,  
-    You gave me love, a second chance.  
-    Your hands so strong, yet soft and kind,  
-    A heart like yours is hard to find.  
-
-    I’m sorry for the times I missed,  
-    The chores undone, the hug unkissed.  
-    But know that deep inside my heart,  
-    We’re never far, we’re never apart.  
-
-    I love you more than words can show,  
-    More than you will ever know.  
-    From this day on, I’ll prove to you,  
+    <p>I love you more than words can show,<br>
+    More than you will ever know.<br>
+    From this day on, I’ll prove to you,<br>
     I’ll stand beside you, strong and true. 💖</p>
+
     <button class="close-btn" onclick="closePopup()">I Love You, Mamee! 💕</button>
 </div>
 
